tests/machine/x/c/values_builtin.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/values_builtin.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/values_builtin.c:130:22: error: invalid initializer
  130 |   map_string_int m = (tmp_item_t){.a = 1, .b = 2, .c = 3};
      |                      ^

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:55Z
